# keiba-data-analytics

./: .env.example  .gitignore  CLAUDE.md  Keiba_Data_Analytics_技術仕様書.md  README.md  autorun.bat  pyproject.toml  run.bat  setup.bat  sync_jvlink.bat
.github/workflows/: ci.yml
config/: config.example.yaml
docs/: user_manual.md  卍の手法調査結果.txt
scripts/: demo_scenario.py  init_db.py  optimize_weights.py  register_factors.py  run_model_search.py  run_pipeline.py  seed_dummy_data.py  smoke_test.py  test_azure_connection.py
src/: __init__.py
src/agents/: __init__.py  alert_interpreter.py  base.py  deep_research.py  factor_proposal.py  nl_query.py  race_analysis.py  report.py
src/automation/: pipeline.py
src/backtest/: __init__.py  engine.py  metrics.py  monte_carlo.py  walk_forward.py
src/betting/: __init__.py  bankroll.py  executor.py  result_collector.py  safety.py  selenium_executor.py
src/dashboard/: __init__.py  app.py  config_loader.py  task_manager.py
src/data/: __init__.py  db.py  jvlink_sync.py  provider.py  validator.py
src/factors/: __init__.py  base.py  lifecycle.py  registry.py
src/llm_gateway/: __init__.py  azure_provider.py  config.py  gateway.py  vertex_provider.py
src/notifications/: __init__.py  notifier.py
src/reporting/: tax_report.py
src/scoring/: __init__.py  batch_scorer.py  calibration.py  calibration_trainer.py  correlation_analyzer.py  engine.py  evaluator.py  factor_discovery.py  feature_importance.py  stratified_calibrator.py  weight_optimizer.py
src/search/: __init__.py  config.py  orchestrator.py  reporter.py  result_store.py  trial_runner.py
src/strategy/: __init__.py  base.py
tests/: conftest.py
tests/test_agents/: test_agents.py  test_new_agents.py
tests/test_automation/: test_pipeline.py
tests/test_backtest/: test_engine.py  test_metrics.py  test_monte_carlo.py  (+1 more)
(+74 files in other folders)
